--- a/css/style.css
+++ b/css/style.css
@@ -1652,12 +1652,12 @@ i.icon-white {
 	
 
 	#about .about-container .background {
-	  min-height: 250px;
-	  width: 100%;
+	  height: 200px;
+	width: 100%; 
 	  background: url(../img/user.png) center no-repeat;
 	  margin-bottom: 10px;
-	  margin-right: 100px;
-	  border-radius: 50%;
+	  margin-right: 110px;
+	  
 	}
 	#about .about-container .title{
 		font-family: "Gravedigger";
